--- a/app/src/app/app.component.css
+++ b/app/src/app/app.component.css
@@ -1,10 +1,5 @@
 .container {
   display: flex;
   justify-content: space-evenly;
-}
-.example-card {
-  max-width: 200px;
-}
-div{
-    background-color:coral;
+  flex-direction: row;
 }
