--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,5 +1,2 @@
-<div class="container">
-  <app-product-card class = "example-card"></app-product-card>
-  <app-product-card class = "example-card"></app-product-card>
-  <app-product-card class = "example-card"></app-product-card>
-</div>
+<app-bar></app-bar>
+<app-list-of-products class="container"></app-list-of-products>
